fix spacing issue on show view

--- a/public/my_style.css
+++ b/public/my_style.css
@@ -433,3 +433,7 @@ li.gig-display:hover {
   margin-left: 5px;
   border-radius: 5px;
 }
+
+.song-name-show {
+  margin-left: 8px;
+}
